--- a/Css/main.css
+++ b/Css/main.css
@@ -7,7 +7,6 @@ html, body {
 }
 
 header {
-    text-align: centers;
     background: black;
 }
 
